@@ -532,6 +532,12 @@ contents, and the \code{*=} assignment operator to repeat an array.
 functions: \function{get_history_item()},
 \function{get_current_history_length()}, and \function{redisplay()}.
 
+\item Support for more advanced POSIX signal handling -- specifically
+the functions \function{sigpending}, \function{sigprocmask} and
+\function{sigsupend}, and depending on platform support -- was added
+to the \module{signal} module.  These functions make some previously
+unavoidable race conditions avoidable.
+
 \end{itemize}
 
 
